[package]
name = "saitama-node-subsystem-test-helpers"
description = "Subsystem traits and message definitions"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
parking_lot = "0.12.0"
saitama-node-subsystem = { path = "../subsystem" }
saitama-node-subsystem-util = { path = "../subsystem-util" }
saitama-primitives = { path = "../../primitives" }
sp-core = { path = "../../../substrate/primitives/core" }
sp-keystore = { path = "../../../substrate/primitives/keystore" }
sc-keystore = { path = "../../../substrate/client/keystore" }
sp-keyring = { path = "../../../substrate/primitives/keyring" }
sp-application-crypto = { path = "../../../substrate/primitives/application-crypto" }

[dev-dependencies]
saitama-overseer = { path = "../overseer" }
