[package]
name = "saitama-node-subsystem-types"
description = "Subsystem traits and message definitions"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
saitama-primitives = { path = "../../primitives" }
saitama-node-primitives = { path = "../primitives" }
saitama-node-network-protocol = { path = "../network/protocol" }
saitachain-statement-table = { path = "../../statement-table" }
saitama-node-jaeger = { path = "../jaeger" }
orchestra = "0.0.5"
sc-network = { path = "../../../substrate/client/network" }
sp-api = { path = "../../../substrate/primitives/api" }
sp-consensus-babe = { path = "../../../substrate/primitives/consensus/babe" }
sp-authority-discovery = { path = "../../../substrate/primitives/authority-discovery" }
sc-transaction-pool-api = { path = "../../../substrate/client/transaction-pool/api" }
smallvec = "1.8.0"
substrate-prometheus-endpoint = { path = "../../../substrate/utils/prometheus" }
thiserror = "1.0.48"
async-trait = "0.1.57"
