[package]
name = "pallet-burn"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frame-support = { path = "../../frame/support", default-features = false }
pallet-balances = { path = "../../frame/balances", default-features = false }
frame-system = { path = "../../frame/system", default-features = false }
sp-runtime = { path = "../../primitives/runtime", default-features = false }
sp-std = { path = "../../primitives/std", default-features = false }
sp-core = { path = "../../primitives/core", default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = ["derive"] }
parity-scale-codec = { version = "3.6.1", default-features = false, features = [ "derive" ] }
saitama-core-primitives ={default-features = false,path ="../../../saitachain/core-primitives"}
frame-benchmarking = {  default-features = false, optional = true, path = "../../frame/benchmarking" }


[dev-dependencies]
sp-io = { path = "../../primitives/io" }
sp-core = { path = "../../primitives/core" }


[features]
default = ["std"]
std = [
  "parity-scale-codec/std",
 "scale-info/std",
 "sp-runtime/std", 
 "sp-std/std",
 "saitama-core-primitives/std",
  "pallet-balances/std",
  "frame-support/std", 
  "sp-core/std",
  "frame-benchmarking?/std",
  "frame-system/std"
  ]

runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]