[package]
name = "saitama-node-core-chain-api"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
sp-blockchain = { path = "../../../../substrate/primitives/blockchain" }
saitama-primitives = { path = "../../../primitives" }
saitama-node-metrics = { path = "../../metrics" }
saitama-node-subsystem = { path = "../../subsystem" }
sc-client-api = { path = "../../../../substrate/client/api" }
sc-consensus-babe = { path = "../../../../substrate/client/consensus/babe" }

[dev-dependencies]
futures = { version = "0.3.21", features = ["thread-pool"] }
maplit = "1.0.2"
parity-scale-codec = "3.6.1"
saitama-node-primitives = { path = "../../primitives" }
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { path = "../../../../substrate/primitives/core" }
