[package]
name = "saitama-node-core-dispute-coordinator"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
parity-scale-codec = "3.6.1"
kvdb = "0.13.0"
thiserror = "1.0.48"
schnellru = "0.2.1"
fatality = "0.0.6"

saitama-primitives = { path = "../../../primitives" }
saitama-node-primitives = { path = "../../primitives" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-subsystem-util = { path = "../../subsystem-util" }

sc-keystore = { path = "../../../../substrate/client/keystore" }


[dev-dependencies]
kvdb-memorydb = "0.13.0"
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-keystore = { path = "../../../../substrate/primitives/keystore" }
assert_matches = "1.4.0"
test-helpers = { package = "saitama-primitives-test-helpers", path = "../../../primitives/test-helpers" }
futures-timer = "3.0.2"
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto" }
sp-tracing = { path = "../../../../substrate/primitives/tracing" }

[features]
# If not enabled, the dispute coordinator will do nothing.
disputes = []
