[package]
name = "saitama-node-core-pvf-checker"
description = "SaitaChain crate that implements the PVF pre-checking subsystem. Responsible for checking and voting for PVFs that are pending approval."
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
thiserror = "1.0.48"
gum = { package = "tracing-gum", path = "../../gum" }

saitama-node-primitives = { path = "../../primitives" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-primitives = { path = "../../../primitives" }
saitama-node-subsystem-util = { path = "../../subsystem-util" }
saitama-overseer = { path = "../../overseer" }

sp-keystore = { path = "../../../../substrate/primitives/keystore" }

[dev-dependencies]
sp-core = { path = "../../../../substrate/primitives/core" }
sp-runtime = { path = "../../../../substrate/primitives/runtime" }
sc-keystore = { path = "../../../../substrate/client/keystore" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
test-helpers = { package = "saitama-primitives-test-helpers", path = "../../../primitives/test-helpers" }
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto" }
futures-timer = "3.0.2"
