[package]
name = "saitama-node-core-runtime-api"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
schnellru = "0.2.1"

sp-consensus-babe = { path = "../../../../substrate/primitives/consensus/babe" }

saitama-primitives = { path = "../../../primitives" }
saitama-node-metrics = { path = "../../metrics" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-subsystem-types = { path = "../../subsystem-types" }

[dev-dependencies]
sp-api = { path = "../../../../substrate/primitives/api" }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
async-trait = "0.1.57"
futures = { version = "0.3.21", features = ["thread-pool"] }
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
saitama-node-primitives = { path = "../../primitives" }
test-helpers = { package = "saitama-primitives-test-helpers", path = "../../../primitives/test-helpers" }
