[package]
name = "saitama-availability-distribution"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
parity-scale-codec = { version = "3.6.1", features = ["std"] }
saitama-primitives = { path = "../../../primitives" }
saitama-erasure-coding = { path = "../../../erasure-coding" }
saitama-node-network-protocol = { path = "../protocol" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-subsystem-util = { path = "../../subsystem-util" }
saitama-node-primitives = { path = "../../primitives" }
sp-core = { path = "../../../../substrate/primitives/core", features = ["std"] }
sp-keystore = { path = "../../../../substrate/primitives/keystore" }
thiserror = "1.0.48"
rand = "0.8.5"
derive_more = "0.99.17"
schnellru = "0.2.1"
fatality = "0.0.6"

[dev-dependencies]
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
sp-core = { path = "../../../../substrate/primitives/core", features = ["std"] }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sp-tracing = { path = "../../../../substrate/primitives/tracing" }
sc-network = { path = "../../../../substrate/client/network" }
futures-timer = "3.0.2"
assert_matches = "1.4.0"
saitama-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
