[package]
name = "saitama-availability-recovery"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
schnellru = "0.2.1"
rand = "0.8.5"
fatality = "0.0.6"
thiserror = "1.0.48"
gum = { package = "tracing-gum", path = "../../gum" }

saitama-erasure-coding = { path = "../../../erasure-coding" }
saitama-primitives = { path = "../../../primitives" }
saitama-node-primitives = { path = "../../primitives" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-subsystem-util = { path = "../../subsystem-util" }
saitama-node-network-protocol = { path = "../protocol" }
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sc-network = { path = "../../../../substrate/client/network" }

[dev-dependencies]
assert_matches = "1.4.0"
env_logger = "0.9.0"
futures-timer = "3.0.2"
log = "0.4.17"

sp-core = { path = "../../../../substrate/primitives/core" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto" }
sc-network = { path = "../../../../substrate/client/network" }

saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
saitama-primitives-test-helpers = { path = "../../../primitives/test-helpers" }
