[package]
name = "saitama-availability-bitfield-distribution"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
always-assert = "0.1"
futures = "0.3.21"
futures-timer = "3.0.2"
gum = { package = "tracing-gum", path = "../../gum" }
saitama-primitives = { path = "../../../primitives" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-subsystem-util = { path = "../../subsystem-util" }
saitama-node-network-protocol = { path = "../protocol" }
rand = "0.8"

[dev-dependencies]
saitama-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-application-crypto = { path = "../../../../substrate/primitives/application-crypto" }
sp-authority-discovery = { path = "../../../../substrate/primitives/authority-discovery" }
sp-keystore = { path = "../../../../substrate/primitives/keystore" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
maplit = "1.0.2"
log = "0.4.17"
env_logger = "0.9.0"
assert_matches = "1.4.0"
rand_chacha = "0.3.1"
