[package]
name = "saitama-test-client"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }

# SaitaChain dependencies
saitachain-test-runtime = { path = "../../../runtime/test-runtime" }
saitama-test-service = { path = "../service" }
saitama-primitives = { path = "../../../primitives" }
saitama-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { path = "../../../../substrate/test-utils/client" }
sc-service = { path = "../../../../substrate/client/service" }
sc-block-builder = { path = "../../../../substrate/client/block-builder" }
sc-consensus = { path = "../../../../substrate/client/consensus/common" }
sc-offchain = { path = "../../../../substrate/client/offchain" }
sp-blockchain = { path = "../../../../substrate/primitives/blockchain" }
sp-runtime = { path = "../../../../substrate/primitives/runtime" }
sp-inherents = { path = "../../../../substrate/primitives/inherents" }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-api = { path = "../../../../substrate/primitives/api" }
sp-timestamp = { path = "../../../../substrate/primitives/timestamp" }
sp-consensus = { path = "../../../../substrate/primitives/consensus/common" }
sp-consensus-babe = { path = "../../../../substrate/primitives/consensus/babe" }
sp-state-machine = { path = "../../../../substrate/primitives/state-machine" }
sp-io = { path = "../../../../substrate/primitives/io" }
frame-benchmarking = { path = "../../../../substrate/frame/benchmarking" }

[dev-dependencies]
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
futures = "0.3.21"

[features]
runtime-benchmarks= [
	"frame-benchmarking/runtime-benchmarks",
	"saitama-primitives/runtime-benchmarks",
	"saitachain-test-runtime/runtime-benchmarks",
	"saitama-test-service/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
