[package]
name = "saitama-performance-test"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
thiserror = "1.0.48"
quote = "1.0.28"
env_logger = "0.9"
log = "0.4"

saitama-node-core-pvf-prepare-worker = { path = "../../core/pvf/prepare-worker" }
saitama-erasure-coding = { path = "../../../erasure-coding" }
saitama-node-primitives = { path = "../../primitives" }
saitama-primitives = { path = "../../../primitives" }

sc-executor-common = { path = "../../../../substrate/client/executor/common" }
sp-maybe-compressed-blob = { path = "../../../../substrate/primitives/maybe-compressed-blob" }

[[bin]]
name = "gen-ref-constants"
path = "src/gen_ref_constants.rs"

[features]
runtime-benchmarks = [
	"saitama-primitives/runtime-benchmarks",
]
