[package]
name = "saitama-test-service"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
hex = "0.4.3"
gum = { package = "tracing-gum", path = "../../gum" }
rand = "0.8.5"
tempfile = "3.2.0"
tokio = "1.24.2"

# SaitaChain dependencies
saitama-overseer = { path = "../../overseer" }
saitama-primitives = { path = "../../../primitives" }
saitachain-parachain-primitives = { path = "../../../parachain" }
saitachain-rpc = { path = "../../../rpc" }
saitama-runtime-common = { path = "../../../runtime/common" }
saitama-service = { path = "../../service" }
saitama-node-subsystem = { path = "../../subsystem" }
saitama-node-primitives = { path = "../../primitives" }
saitachain-test-runtime = { path = "../../../runtime/test-runtime" }
test-runtime-constants = { path = "../../../runtime/test-runtime/constants" }
saitama-runtime-parachains = { path = "../../../runtime/parachains" }

# Substrate dependencies
sp-authority-discovery = { path = "../../../../substrate/primitives/authority-discovery" }
sc-authority-discovery = { path = "../../../../substrate/client/authority-discovery" }
babe = { package = "sc-consensus-babe", path = "../../../../substrate/client/consensus/babe" }
babe-primitives = { package = "sp-consensus-babe", path = "../../../../substrate/primitives/consensus/babe" }
consensus_common = { package = "sp-consensus", path = "../../../../substrate/primitives/consensus/common" }
frame-system = { path = "../../../../substrate/frame/system" }
grandpa = { package = "sc-consensus-grandpa", path = "../../../../substrate/client/consensus/grandpa" }
grandpa_primitives = { package = "sp-consensus-grandpa", path = "../../../../substrate/primitives/consensus/grandpa" }
inherents = { package = "sp-inherents", path = "../../../../substrate/primitives/inherents" }
pallet-staking = { path = "../../../../substrate/frame/staking" }
pallet-balances = { path = "../../../../substrate/frame/balances" }
pallet-transaction-payment = { path = "../../../../substrate/frame/transaction-payment" }
sc-chain-spec = { path = "../../../../substrate/client/chain-spec" }
sc-cli = { path = "../../../../substrate/client/cli" }
sc-client-api = { path = "../../../../substrate/client/api" }
sc-consensus = { path = "../../../../substrate/client/consensus/common" }
sc-network = { path = "../../../../substrate/client/network" }
sc-tracing = { path = "../../../../substrate/client/tracing" }
sc-transaction-pool = { path = "../../../../substrate/client/transaction-pool" }
sc-service = { path = "../../../../substrate/client/service", default-features = false }
sp-arithmetic = { path = "../../../../substrate/primitives/arithmetic" }
sp-blockchain = { path = "../../../../substrate/primitives/blockchain" }
sp-core = { path = "../../../../substrate/primitives/core" }
sp-keyring = { path = "../../../../substrate/primitives/keyring" }
sp-runtime = { path = "../../../../substrate/primitives/runtime" }
sp-state-machine = { path = "../../../../substrate/primitives/state-machine" }
substrate-test-client = { path = "../../../../substrate/test-utils/client" }

[dev-dependencies]
pallet-balances = { path = "../../../../substrate/frame/balances", default-features = false }
serde_json = "1.0.96"
substrate-test-utils = { path = "../../../../substrate/test-utils" }
tokio = { version = "1.24.2", features = ["macros"] }

[features]
runtime-metrics=[ "saitachain-test-runtime/runtime-metrics" ]
runtime-benchmarks= [
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-staking/runtime-benchmarks",
	"saitachain-parachain-primitives/runtime-benchmarks",
	"saitama-primitives/runtime-benchmarks",
	"saitama-runtime-common/runtime-benchmarks",
	"saitama-runtime-parachains/runtime-benchmarks",
	"saitama-service/runtime-benchmarks",
	"saitachain-test-runtime/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
