[package]
name = "remote-ext-tests-bags-list"
publish = false
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
saitama-runtime = { path = "../../../runtime/saitachain" }
saitama-runtime-constants = { path = "../../../runtime/saitachain/constants" }

pallet-bags-list-remote-tests = { path = "../../../../substrate/frame/bags-list/remote-tests" }
sp-tracing = { path = "../../../../substrate/primitives/tracing" }
frame-system = { path = "../../../../substrate/frame/system" }
sp-core = { path = "../../../../substrate/primitives/core" }

clap = { version = "4.4.2", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.24.2", features = ["macros"] }
